JumpScript/tests/baselines/reference/parserGenericsInTypeContexts2.errors.txt
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(1,17): error TS2304: Cannot find name 'A'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(1,19): error TS2304: Cannot find name 'X'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(1,21): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(1,25): error TS2304: Cannot find name 'Y'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(1,27): error TS2304: Cannot find name 'Z'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(1,29): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(1,45): error TS2304: Cannot find name 'B'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(1,47): error TS2304: Cannot find name 'X'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(1,49): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(1,53): error TS2304: Cannot find name 'Y'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(1,55): error TS2304: Cannot find name 'Z'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(1,57): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(4,9): error TS2315: Type 'C' is not generic.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(4,11): error TS2304: Cannot find name 'X'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(4,13): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(4,17): error TS2304: Cannot find name 'Y'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(4,19): error TS2304: Cannot find name 'Z'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(4,21): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(5,9): error TS2304: Cannot find name 'D'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(5,11): error TS2304: Cannot find name 'X'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(5,13): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(5,17): error TS2304: Cannot find name 'Y'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(5,19): error TS2304: Cannot find name 'Z'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(5,21): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(6,9): error TS2503: Cannot find namespace 'E'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(6,13): error TS2304: Cannot find name 'X'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(6,15): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(6,19): error TS2304: Cannot find name 'Y'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(6,21): error TS2304: Cannot find name 'Z'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(6,23): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(7,9): error TS2503: Cannot find namespace 'G'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(7,15): error TS2304: Cannot find name 'X'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(7,17): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(7,21): error TS2304: Cannot find name 'Y'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(7,23): error TS2304: Cannot find name 'Z'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(7,25): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(8,9): error TS2304: Cannot find name 'K'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(8,11): error TS2304: Cannot find name 'X'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(8,13): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(8,17): error TS2304: Cannot find name 'Y'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(8,19): error TS2304: Cannot find name 'Z'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(8,21): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(11,16): error TS2304: Cannot find name 'E'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(11,18): error TS2304: Cannot find name 'X'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(11,20): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(11,24): error TS2304: Cannot find name 'Y'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(11,26): error TS2304: Cannot find name 'Z'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(11,28): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(14,16): error TS2304: Cannot find name 'F'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(14,18): error TS2304: Cannot find name 'X'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(14,20): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(14,24): error TS2304: Cannot find name 'Y'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(14,26): error TS2304: Cannot find name 'Z'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump(14,28): error TS2304: Cannot find name 'T'.


==== tests/cases/conformance/parser/ecmascript5/Generics/parserGenericsInTypeContexts2.jump (54 errors) ====
    class C extends A<X<T>, Y<Z<T>>> implements B<X<T>, Y<Z<T>>> {
                    ~
!!! error TS2304: Cannot find name 'A'.
                      ~
!!! error TS2304: Cannot find name 'X'.
                        ~
!!! error TS2304: Cannot find name 'T'.
                            ~
!!! error TS2304: Cannot find name 'Y'.
                              ~
!!! error TS2304: Cannot find name 'Z'.
                                ~
!!! error TS2304: Cannot find name 'T'.
                                                ~
!!! error TS2304: Cannot find name 'B'.
                                                  ~
!!! error TS2304: Cannot find name 'X'.
                                                    ~
!!! error TS2304: Cannot find name 'T'.
                                                        ~
!!! error TS2304: Cannot find name 'Y'.
                                                          ~
!!! error TS2304: Cannot find name 'Z'.
                                                            ~
!!! error TS2304: Cannot find name 'T'.
    }
    
    var v1: C<X<T>, Y<Z<T>>>;
            ~~~~~~~~~~~~~~~~
!!! error TS2315: Type 'C' is not generic.
              ~
!!! error TS2304: Cannot find name 'X'.
                ~
!!! error TS2304: Cannot find name 'T'.
                    ~
!!! error TS2304: Cannot find name 'Y'.
                      ~
!!! error TS2304: Cannot find name 'Z'.
                        ~
!!! error TS2304: Cannot find name 'T'.
    var v2: D<X<T>, Y<Z<T>>> = null;
            ~
!!! error TS2304: Cannot find name 'D'.
              ~
!!! error TS2304: Cannot find name 'X'.
                ~
!!! error TS2304: Cannot find name 'T'.
                    ~
!!! error TS2304: Cannot find name 'Y'.
                      ~
!!! error TS2304: Cannot find name 'Z'.
                        ~
!!! error TS2304: Cannot find name 'T'.
    var v3: E.F<X<T>, Y<Z<T>>>;
            ~
!!! error TS2503: Cannot find namespace 'E'.
                ~
!!! error TS2304: Cannot find name 'X'.
                  ~
!!! error TS2304: Cannot find name 'T'.
                      ~
!!! error TS2304: Cannot find name 'Y'.
                        ~
!!! error TS2304: Cannot find name 'Z'.
                          ~
!!! error TS2304: Cannot find name 'T'.
    var v4: G.H.I<X<T>, Y<Z<T>>>;
            ~
!!! error TS2503: Cannot find namespace 'G'.
                  ~
!!! error TS2304: Cannot find name 'X'.
                    ~
!!! error TS2304: Cannot find name 'T'.
                        ~
!!! error TS2304: Cannot find name 'Y'.
                          ~
!!! error TS2304: Cannot find name 'Z'.
                            ~
!!! error TS2304: Cannot find name 'T'.
    var v6: K<X<T>, Y<Z<T>>>[];
            ~
!!! error TS2304: Cannot find name 'K'.
              ~
!!! error TS2304: Cannot find name 'X'.
                ~
!!! error TS2304: Cannot find name 'T'.
                    ~
!!! error TS2304: Cannot find name 'Y'.
                      ~
!!! error TS2304: Cannot find name 'Z'.
                        ~
!!! error TS2304: Cannot find name 'T'.
    
    
    function f1(a: E<X<T>, Y<Z<T>>>) {
                   ~
!!! error TS2304: Cannot find name 'E'.
                     ~
!!! error TS2304: Cannot find name 'X'.
                       ~
!!! error TS2304: Cannot find name 'T'.
                           ~
!!! error TS2304: Cannot find name 'Y'.
                             ~
!!! error TS2304: Cannot find name 'Z'.
                               ~
!!! error TS2304: Cannot find name 'T'.
    }
    
    function f2(): F<X<T>, Y<Z<T>>> {
                   ~
!!! error TS2304: Cannot find name 'F'.
                     ~
!!! error TS2304: Cannot find name 'X'.
                       ~
!!! error TS2304: Cannot find name 'T'.
                           ~
!!! error TS2304: Cannot find name 'Y'.
                             ~
!!! error TS2304: Cannot find name 'Z'.
                               ~
!!! error TS2304: Cannot find name 'T'.
    }
    
    